[package]
name = "justcash-bind"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.30", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.30", features = [ "build" ] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "justcash"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
