[package]
name = "justcash-bind"
version = "0.1.1"
edition = "2024"

[dependencies]
ciborium = "0.2.2"
justcash_prove = "0.1.2"
uniffi = { version = "0.30", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.30", features = [ "build" ] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "justcash"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
